docs: 이슈 템플릿 수정

--- a/.github/ISSUE_TEMPLATE/리팩터링.md
+++ b/.github/ISSUE_TEMPLATE/리팩터링.md
@@ -7,10 +7,11 @@ assignees: ''
 
 ---
 
-# 리팩터링 필요 요소
+# 어떤 것을 리팩터링하나요?
 
-# 리팩터링 필요 이유
+# 왜 리팩터링이 필요한가요?
 
-# 상세 요구 사항
-
-# 스크린샷
+# 리팩터링 상세 내용
+- [ ] TODO
+- [ ] TODO
+- [ ] TODO
