--- a/.github/ISSUE_TEMPLATE/기능구현.md
+++ b/.github/ISSUE_TEMPLATE/기능구현.md
@@ -7,10 +7,14 @@ assignees: ''
 
 ---
 
-# 기능 추가/개선 필요 요소
+## 어떤 기능인가요?
 
-# 기능 추가/개선 필요 이유
+> 추가하려는 기능에 대해 간결하게 설명해주세요
 
-# 상세 요구 사항
+## 작업 상세 내용
 
-# 스크린샷
+- [ ] TODO
+- [ ] TODO
+- [ ] TODO
+
+## 참고할만한 자료(선택)
