--- a/.github/ISSUE_TEMPLATE/버그-리포트.md
+++ b/.github/ISSUE_TEMPLATE/버그-리포트.md
@@ -7,12 +7,16 @@ assignees: ''
 
 ---
 
-# 발생 일시
+## 어떤 버그인가요?
 
-# 발생 위치
+> 어떤 버그인지 간결하게 설명해주세요
 
-# 증상
+## 어떤 상황에서 발생한 버그인가요?
 
-# 재현 방법
+> (가능하면) Given-When-Then 형식으로 서술해주세요
 
-# 스크린샷
+## 예상 결과
+
+> 예상했던 정상적인 결과가 어떤 것이었는지 설명해주세요
+
+## 참고할만한 자료(선택)
